pkg/kgateway/translator/gateway/testutils/inputs/traffic-policy/header-modifiers-route.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: example-gateway
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
  allowedListeners:
    namespaces:
      from: All
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    test: example-gateway
  ports:
    - name: http
      port: 8000
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route-1
spec:
  parentRefs:
    - name: example-gateway
      namespace: default
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
      - name: example-svc
        port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route-2
spec:
  parentRefs:
    - kind: ListenerSet
      group: gateway.networking.k8s.io
      name: ls
      namespace: default
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
      - name: example-svc
        port: 8000
